# priority-sorter

./: .gitignore  Cargo.toml  README.md  flake.nix  launch.json  rust-toolchain.toml  spec.md
src/: app.rs  item.rs  main.rs  sorter.rs
