[package]
name = "priority-sorter"
version = "0.1.0"
edition = "2021"
description = "Helps you sort a list of items by priority."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "TODO"
keywords = ["AST"]
categories = ["visualization", "text-editors"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9", features = ["async-std", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = "1.0"
directories-next = "2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Storage"] }
wasm-timer = "0.2"
