[package]
name = "priority-sorter"
version = "0.1.0"
edition = "2021"
description = "Helps you sort a list of items by priority."
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "TODO"
keywords = ["priority", "gui", "sorter"]
categories = ["productivity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
iced = { version = "0.13", features = ["async-std", "debug"] }
iced_core = "0.13"
once_cell = "1.15"
rand = "0.9.2"
